# RogueMage

./: .gitignore  Cargo.toml
.cargo/: config.toml
assets/: natural.rules  particle_material.wgsl
assets/sprites/: new_tileset.pdn
src/: blocks.rs  cells.rs  chemistry.rs  main.rs  math_utils.rs  parser.rs  particle_model.rs  particle_render.rs  pbf.rs  player.rs  rules.rs  rules_asset.rs  sparse_matrices.rs  spells.rs  storage.rs
