[package]
name = "rogue_mage"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.53"
# bevy = { version = "0.6", features = ["trace", "trace_chrome"] }
bevy = "0.6"
bevy_rapier2d = "0.12.1"
nom = "7.1.0"
rand = "0.8"
rand_distr = "0.4"
simple-error = "0.2.3"
bitflags = "1.3"
lazy_static = "1.4"
num = "0.4"
noise = "0.7"
bytemuck = "1.8"

[profile.dev]
opt-level = 3

[profile.dev.package."*"]
opt-level = 3

[profile.release]
debug = true
